--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,14 @@ cython_debug/
 .pypirc
 
 gemini.json
+
+# Latex auxiliary files
+*.aux
+*.bbl
+*.blg
+*.fdb_latexmk
+*.fls
+*.log
+*.out
+*.synctex.gz
+*.toc
